Added Facebook authentication.:

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Fannetic</title>
-    <link href='http://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' type='text/css'>
-    <style>
-    body {
-      background-color: #111;
-      padding: 200px 0;
-    }
-      h1 {
-        text-shadow: 0px 0px 10px #C44367;
-        font-weight: normal;
-        color: #C44367;
-        font-family: 'Monoton', cursive;
-        font-size: 100px;
-        text-align: center;
-        
-      }
-    </style>
-</head>
-
-<body>
-    <h1>HELLO, WORLD.</h1>
-</body>
-</html>
+<h1>Hello, <%= @name %>.</h1>
