--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Hello, <%= @name %>.</h1>
+<% for event in @events %>
+    <td><%= link_to event.title, :action => "show", :id => event %></td>
+  </tr>
+<% end %>
