--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,21 +1,36 @@
 <h1>New Event</h1>
 <%= form_for :event, url: events_path do |f| %>
-  <p>
-    <%= f.label :title %><br>
+  <div>
+    <%= f.label :title %><br />
     <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :text  %><br>
-    <%= f.text_area :text %>
-  </p>
- 
-  <p>
+  </div>
+
+  <div>
+    <%= f.label :location %><br />
+    <%= f.text_field :location %>
+  </div>
+
+  <div>
+    <%= f.label :start %><br />
+    <%= f.datetime_select :start, :ampm => true, :minute_step => 15  %>
+  </div>
+
+  <div>
+    <%= f.label :end %><br />
+    <%= f.datetime_select :end, :ampm => true, :minute_step => 15  %>
+  </div>
+
+  <div>
+    <%= f.label :team_id  %><br />
+    <%= f.collection_select :team_id, Team.order(:title),:id,:title, include_blank: true %>
+  </div>
+
+  <div>
+    <%= f.label :body  %><br />
+    <%= f.text_area :body %>
+  </div>
+
+  <div>
     <%= f.submit %>
-  </p>
+  </div>
 <% end %>
-
-
-<div id="@user.id">
-  User info
-</div>
