Cleaned up views, added more controller code.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,7 @@
-<% for event in @events %>
-    <td><%= link_to event.title, :action => "show", :id => event %></td>
-  </tr>
-<% end %>
+<h1>Events</h1>
+
+<ul>
+  <% for event in @events %>
+    <li><%= link_to event.title, :action => "show", :id => event %>
+  <% end %>
+</ul>
