--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,14 @@
 <body>
   <ul>
     <li><%= link_to 'Fannetic', root_url %>
+    <li><%= link_to "Events", events_path %>
+    <li><%= link_to "Teams", teams_path %>
+  </ul>
+    
+  <ul>
     <% if fan_signed_in? %>
       <li><%= current_fan.first_name %>
+      <li><%= link_to "Tickets", fan_tickets_path(current_fan) %>
       <li><%= link_to "Logout", :destroy_user_session %>
     <% else %>
       <li><%= link_to "Sign in with Facebook", fan_omniauth_authorize_path(:facebook) %>
