--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Teams#index</h1>
-<p>Find me in app/views/teams/index.html.erb</p>
+<h1>Teams</h1>
+
+<ul>
+  <% for team in @teams %>
+    <li><%= link_to team.title, :action => "show", :id => team %>
+  <% end %>
+</ul>
+
+
+<%= link_to "Create team", new_team_path %>
