--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Event</h1>
-<%= form_for :event, url: events_path do |f| %>
+<%= form_for :event, url: team_events_path(@team) do |f| %>
   <div>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
@@ -20,13 +20,15 @@
     <%= f.datetime_select :end, :ampm => true, :minute_step => 15  %>
   </div>
 
-  <div>
-    <%= f.label :team_id  %><br />
-    <%= f.collection_select :team_id, Team.order(:title),:id,:title, include_blank: true %>
-  </div>
+  <% if false %>
+  # <div>
+  #   <%= f.label :team_id  %><br />
+  #   <%= f.collection_select :team_id, Team.order(:title),:id,:title, include_blank: true %>
+  # </div>
+  <% end %>
 
   <div>
-    <%= f.label :body  %><br />
+    <%= f.label :body %><br />
     <%= f.text_area :body %>
   </div>
 
