--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <body>
   <ul>
     <li><%= link_to 'Fannetic', root_url %>
-    <li><%= link_to "Events", events_path %>
+    <li><%= link_to "Events", root_url %>
     <li><%= link_to "Teams", teams_path %>
   </ul>
     
