--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,2 +1,1 @@
-<h1>Tickets#show</h1>
-<p>Find me in app/views/tickets/show.html.erb</p>
+<h1>1 Ticket for <%= link_to @event.title, team_event_path(@team,@event) %> belonging to <%= link_to @fan.name, fan_path(@fan) %></h1>
