--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,9 +1,16 @@
 <h1>New Ticket for <%= @event.title %></h1>
 
-<%= form_for :ticket, url: team_event_tickets_path(@team,@event) do |f| %>
-  <p>Credit card information here</p>
+<%= form_tag team_event_tickets_path(@team,@event) do %>
+  <article>
+    <label class="amount">
+      <span>Amount: <%= number_to_currency(@event.price/100) %></span>
+    </label>
+  </article>
 
-  <div>
-    <%= f.submit %>
-  </div>
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="Ticket for <%= @event.title %>"
+          data-amount="<%= @event.price %>"
+          data-name="Fannetic"
+          data-email="<%= current_fan.email %>"></script>
 <% end %>
