--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,27 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="small-12 columns">
+    <h1>Sign up</h1>
+    <div class="row">
+      <div class="small-12 medium-6 columns">
+        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+          <%= devise_error_messages! %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+          <div><%= f.label :email %><br />
+          <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+          <div><%= f.label :password %><br />
+          <%= f.password_field :password %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+          <div><%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+          <div><%= f.submit "Sign up", :class => 'button radius' %></div>
+        <% end %>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        <%= render "devise/shared/links" %>
+      </div>
+      <div class="small-12 medium-6 columns">
 
-<%= render "devise/shared/links" %>
+      </div>
+  </div>
+</div>
