--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,7 +50,6 @@
   color: white;
   text-align: center;
   padding: 30px 15px;
-  margin-bottom: 20px;
   border: 0px solid #9a2e22;
   border-width: 8px 0 2px 0;
 
@@ -58,7 +57,22 @@
     color: white;
     text-shadow: 2px 2px 0px rgba(0,0,0,0.4);
   }
+  h3,
+  h3 a {
+    color: rgba(255,255,255,0.8);
+  }
 }
+#intro {
+  background-color: #f6f6f6;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  border-bottom: 2px solid #eee;
+  margin-bottom: 2rem;
+  h3 {
+    font-weight: 600;
+  }
+}
+
 
 #logo {
   display: block;
