--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New Event</h1>
-<%= form_for :event, url: team_events_path(@team) do |f| %>
+<div class="row">
+  <div class="small-12 columns">
+    <h1>New Event</h1>
+    <%= form_for :event, url: team_events_path(@team) do |f| %>
   
-  <%= render :partial => "form", :locals => {:f => f} %>
+      <%= render :partial => "form", :locals => {:f => f} %>
 
-  <div>
-    <%= f.submit %>
+      <%= f.submit :class => 'button right' %>
+    <% end %>
   </div>
-<% end %>
+</div>
