--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Teams#edit</h1>
-<p>Find me in app/views/teams/edit.html.erb</p>
+<div class="row">
+  <div class="small-12 columns">
+    <h1>Teams#edit</h1>
+    <p>Find me in app/views/teams/edit.html.erb</p>
+  </div>
+</div>
