--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,12 +1,16 @@
-<h1>New Team</h1>
+<div class="row">
+  <div class="small-12 large-6 columns">
+    <h1>New Team</h1>
 
-<%= form_for :team, url: teams_path do |f| %>
-  <div>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
+    <%= form_for :team, url: teams_path do |f| %>
+      <div>
+        <%= f.label :title %>
+        <%= f.text_field :title %>
+      </div>
 
-  <div>
-    <%= f.submit %>
+      <div>
+        <%= f.submit :class => 'button' %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
