--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,1 +1,5 @@
-<h1>1 Ticket for <%= link_to @event.title, team_event_path(@team,@event) %> belonging to <%= link_to @fan.name, fan_path(@fan) %></h1>
+<div class="row">
+  <div class="small-12 columns">
+    <h1>1 Ticket for <%= link_to @event.title, team_event_path(@team,@event) %> belonging to <%= link_to @fan.name, fan_path(@fan) %></h1>
+  </div>
+</div>
